--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,13 @@
     <string name="get_data_alert_dialog_message_text">Произошла ошибка при загрузке данных. Попробуем получить данные снова?</string>
     <string name="get_data_alert_dialog_negative_button_text">Нет</string>
     <string name="get_data_alert_dialog_positive_button_text">Попробуем</string>
+    <string name="vk_login_alert_dialog_title_text">Ошибка</string>
+    <string name="vk_login_alert_dialog_message_text">Произошла ошибка при логине во Вконтакте. Попробуем снова?</string>
+    <string name="vk_login_alert_dialog_negative_button_text">Нет</string>
+    <string name="vk_login_alert_dialog_positive_button_text">Попробуем</string>
     <string name="search_edit_text_hint">Поиск</string>
+    <string name="init_loading_text">Работаем!</string>
     <string name="error_view_smile_text">Сервер недоступен. Попробуйте позже</string>
     <string name="error_view_error_text">Сервер недоступен. Попробуйте позже</string>
+    <integer name="com_vk_sdk_AppId">7637409</integer>
 </resources>
