--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,12 @@
     <string name="toolbar_menu_settings">Настройки</string>
     <string name="bottom_nav_news">Фид</string>
     <string name="bottom_nav_news_liked">Избранное</string>
+    <string name="save_app_theme_selection">Сохранять тему приложения</string>
+    <string name="save_app_theme_selection_summary">Тема приложения будет сохранена даже между сессиями.</string>
+    <string name="open_app_system_settings">Открыть системные настройки</string>
+    <string name="inner_settings">Внутренние настройки</string>
+    <string name="outer_settings">Внешние настройки</string>
+    <string name="open_app_system_settings_summary">Открыть системные настройки, рпедоставить разрешения, почистить кэш, и т.д.</string>
     <string name="bottom_nav_profile_tab">Профиль</string>
     <string name="tools_post_text">Съешь ещё этих мягких французских булок, да выпей же чаю. Съешь ещё этих мягких французских булок, да выпей же чаю.  Съешь ещё этих мягких французских булок, да выпей же чаю. </string>
     <string name="tools_post_likes_count">666</string>
@@ -22,6 +28,7 @@
     <string name="get_data_alert_dialog_positive_button_text">Попробуем</string>
     <string name="vk_login_alert_dialog_title_text">Ошибка</string>
     <string name="vk_login_alert_dialog_message_text">Произошла ошибка при логине во Вконтакте. Попробуем снова?</string>
+    <string name="vk_login_alert_dialog_no_network_no_token_text">Похоже, что интернет соединение отсутствует. Проверьте интернет соединение  и воспользуйтесь приложением позже</string>
     <string name="vk_login_alert_dialog_negative_button_text">Нет</string>
     <string name="vk_login_alert_dialog_positive_button_text">Попробуем</string>
     <string name="read_permissions_check_alert_dialog_message_text">Похоже, что вы не дали разрешение на чтение данных из галереи. Без этого разрешения мы не сможем прикрепить картинку к посту. Попробуем снова?</string>
@@ -30,11 +37,14 @@
     <string name="grant_permissions_check_alert_dialog_positive_button_text">Попробуем</string>
     <string name="search_edit_text_hint">Поиск</string>
     <string name="init_loading_text">Работаем!</string>
+    <string name="saved_nothing_text">но ты же ничего не сохранил?!</string>
+    <string name="saved_nothing_image_desc">Список сохраненных постов пуст</string>
     <string name="error_view_load_posts_error_text">Произошла ошибка при загрузке данных, попробуйте позже. Попробуйте позже</string>
     <string name="error_view_smile_text">Сервер недоступен. Попробуйте позже</string>
     <string name="db_loading_error">Произошла ошибка при обработке базы данных внутри приложения. Пожалуйста, свяжитесь с разработчиками приложения и сообщите о найтеднной ошибке</string>
     <string name="db_error_text">Произошла ошибка при обращении к базе данных</string>
     <string name="post_update_error_text">Произошла ошибка при выполнении действия с постом. Текущие данные могут отображаться некорректно</string>
+    <string name="comment_update_error_text">Произошла ошибка при выполнении действия с комментом. Текущие данные могут отображаться некорректно</string>
     <string name="image_saved_toast_text">Картинка сохранена в галерею</string>
     <string name="likes_count">Число лайков на комментарии</string>
     <integer name="com_vk_sdk_AppId">7637409</integer>
@@ -48,5 +58,8 @@
     <string name="add_image">Добавить изображение</string>
     <string name="what_new">Чего нового?</string>
     <string name="send_post_to_wall_error">Произошла ошибка при отправке поста</string>
-    <string name="send_post_to_wall_success">Пост отправлен</string>
+    <string name="send_post_to_wall_success">Пост успешно создан</string>
+    <string name="toolbar_loading_error">Пороизошла ошибка при загрузке информации о пользователе</string>
+    <string name="network_is_not_available_show_cached">Обнаружены проблемы с сетью. Вам будут показана закэшированная информация</string>
+    <string name="network_is_not_available_can_not_perform_action">Обнаружены проблемы с сетью. Невозможно выполнить данное действие</string>
 </resources>
